--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
-    "deploy": "firebase deploy --only hosting:my-gooogle"
+    "deploy": "firebase deploy --only hosting:my-gooogle",
+    "dev": "firebase serve"
   }
 }
